--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
-<resources>
-    <string name="app_name">JianXin</string>
-
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="app_name">JianXin_release</string>
+    <string name="app_name_dev" tools:ignore="ExtraTranslation">JianXin_debug</string>
     <string name="main_first">首页</string>
     <string name="main_second">活动</string>
     <string name="main_third">发现</string>
